@@ -2,7 +2,10 @@ wxbRestorePanel : Add buttons to mark/unmark directories/files.
 
 wxbRestorePanel : Allow the user to choose where he wants to restore his files
 
-wxbPanel/wxbMainFrame : Add a locking function (for example, deny the user to type something in the console when a restore is in progress)
+wxbRestorePanel : Add a button to force the refreshing of the whole tree
+
+wxbPanel/wxbMainFrame : Add a locking function (for example, deny the user 
+               to type something in the console when a restore is in progress)
 
 wxbRestorePanel : Check more carefully which job we just have run.
 
@@ -14,8 +17,4 @@ general : create a class like wxbtableparser, which fetches commands results
 
 win32 : do a static build
 
-(old build params : )
--lgcc -lodbc32 -lwsock32 -lwinspool -lwinmm -lshell32 -lcomctl32 -lctl3d32 -ladvapi32 -lopengl32 -lglu32 -lole32 -loleaut32 -luuid 
--lkernel32 -lcomdlg32 -lgdi32 -lrpcrt4 -luser32 -lz
-
--fno-pcc-struct-return -Os -fno-rtti -fno-exceptions
+win32 : correct Makefile.in to use ressource file
